# py-update

./: README.md  pyproject.toml
src/update/: __init__.py  main.py  update.py
tests/: update.py
